--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  task_api:
+  tasks_api:
     git:
-      url: https://github.com/LocTr/task_api
+      url: https://github.com/LocTr/tasks_api
       ref: main
 
 dev_dependencies:
