--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   tasks_api:
     git:
-      url: https://github.com/LocTr/tasks_api
+      url: https://github.com/LocTr/tasks-api
       ref: main
 
 dev_dependencies:
